--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>dnka links</title>
     <style>
-        /* Переменные для быстрой смены темы */
         :root {
             --bg-color: #ffffff;
             --main-color: #000000;
-            --cursor-bg: #fff;
         }
 
-        /* Темная тема */
         body.dark-mode {
             --bg-color: #000000;
             --main-color: #ffffff;
-            --cursor-bg: #000;
         }
 
         * { cursor: none !important; box-sizing: border-box; }
@@ -42,7 +38,7 @@
             z-index: 999999 !important; 
             transform: translate(-50%, -50%);
             mix-blend-mode: difference;
-            background: #fff; /* Всегда белый, чтобы на разном фоне через difference давать инверсию */
+            background: #fff;
             opacity: 0;
             transition: width 0.2s, height 0.2s, opacity 0.5s ease;
         }
@@ -185,7 +181,6 @@
         const marqueeEl = document.getElementById('marquee-text');
         const discordBtn = document.getElementById('discord-btn');
 
-        // Смена темы
         modeBtn.addEventListener('click', () => {
             document.body.classList.toggle('dark-mode');
             const isDark = document.body.classList.contains('dark-mode');
@@ -200,9 +195,18 @@
         };
 
         const updateCursorPos = (e) => {
-            const x = e.clientX || (e.touches && e.touches[0].clientX);
-            const y = e.clientY || (e.touches && e.touches[0].clientY);
+            const isTouch = e.type.startsWith('touch');
+            const x = isTouch ? e.touches[0].clientX : e.clientX;
+            const y = isTouch ? e.touches[0].clientY : e.clientY;
+
             if (x && y) {
+                // ПЛАВНОЕ ПЛЫТИЕ ПРИ КАСАНИИ
+                if (e.type === 'touchstart') {
+                    cursor.style.transition = 'left 0.6s cubic-bezier(0.25, 1, 0.5, 1), top 0.6s cubic-bezier(0.25, 1, 0.5, 1), width 0.2s, height 0.2s, opacity 0.5s';
+                } else {
+                    cursor.style.transition = 'width 0.2s, height 0.2s, opacity 0.5s';
+                }
+                
                 cursor.style.left = x + 'px';
                 cursor.style.top = y + 'px';
             }
@@ -211,6 +215,7 @@
         window.addEventListener('mousemove', showCursor);
         window.addEventListener('touchstart', showCursor);
         window.addEventListener('mousemove', updateCursorPos);
+        window.addEventListener('touchstart', updateCursorPos);
         window.addEventListener('touchmove', updateCursorPos);
 
         document.querySelectorAll('.interactive').forEach(el => {
