--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             mix-blend-mode: difference;
             background: #fff;
             opacity: 0;
-            transition: width 0.2s, height 0.2s, opacity 0.5s ease;
+            /* Убрана анимация размера (width/height) */
+            transition: opacity 0.5s ease;
         }
-        .cursor-hover { width: 12px !important; height: 12px !important; }
 
         .top-bar {
             background: var(--main-color); color: var(--bg-color); font-size: 10px; height: 22px;
@@ -65,7 +65,6 @@
         .title-wrapper.moved { top: 40px; transform: translateY(0); }
         .title-wrapper.moved h1 { font-size: 24px; }
 
-        /* Центрирование текста 11 на флаге */
         .flag-container { 
             position: relative; 
             display: flex; 
@@ -79,7 +78,7 @@
         .flag-text {
             position: absolute; 
             color: #fff; 
-            font-size: 10px; /* Сделал чуть больше */
+            font-size: 10px; 
             font-weight: bold;
             opacity: 0; 
             transition: opacity 0.3s ease; 
@@ -104,8 +103,8 @@
             display: block; font-weight: bold; font-size: 13px; text-transform: uppercase;
             color: var(--main-color); text-decoration: none; margin-bottom: 5px; padding: 8px 0;
             border-bottom: 1px solid var(--main-color); transition: color 0.2s, border-bottom 0.5s;
+            /* Ховер с серой подсветкой удален */
         }
-        .link-text:hover { opacity: 0.6; }
 
         .gallery-container { overflow: hidden; width: 100%; margin-top: 20px; font-size: 0; }
         .gallery { display: flex; width: max-content; will-change: transform; }
@@ -126,9 +125,9 @@
         .bottom-btn {
             background: var(--main-color); color: var(--bg-color); border: none; padding: 8px 12px;
             font-family: 'Bookish Book', sans-serif; font-size: 10px;
-            text-transform: uppercase; transition: opacity 0.3s, background 0.5s, color 0.5s;
+            text-transform: uppercase; transition: background 0.5s, color 0.5s;
+            /* Ховер с серой подсветкой удален */
         }
-        .bottom-btn:hover { opacity: 0.7; }
 
         .tooltip-wrapper { position: relative; }
         .tooltip-content {
@@ -169,10 +168,10 @@
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me" class="link-text interactive" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com/ogdnka" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me/eelevex" class="link-text interactive" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv/bananapapa228" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com/@dnkanle" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text interactive" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -228,9 +227,10 @@
 
             if (x !== null && y !== null) {
                 if (e.type === 'touchstart') {
-                    cursor.style.transition = 'left 0.6s cubic-bezier(0.25, 1, 0.5, 1), top 0.6s cubic-bezier(0.25, 1, 0.5, 1), width 0.2s, height 0.2s, opacity 0.5s';
+                    // Оставлено плавное подплывание для мобилок
+                    cursor.style.transition = 'left 0.6s cubic-bezier(0.25, 1, 0.5, 1), top 0.6s cubic-bezier(0.25, 1, 0.5, 1), opacity 0.5s';
                 } else {
-                    cursor.style.transition = 'width 0.2s, height 0.2s, opacity 0.5s';
+                    cursor.style.transition = 'opacity 0.5s';
                 }
                 
                 cursor.style.left = x + 'px';
@@ -244,10 +244,7 @@
         window.addEventListener('touchstart', updateCursorPos);
         window.addEventListener('touchmove', updateCursorPos);
 
-        document.querySelectorAll('.interactive').forEach(el => {
-            el.addEventListener('mouseenter', () => cursor.classList.add('cursor-hover'));
-            el.addEventListener('mouseleave', () => cursor.classList.remove('cursor-hover'));
-        });
+        // УБРАНО: Слушатели mouseenter/mouseleave для увеличения курсора
 
         discordBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('dnka').then(() => {
