--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
             mix-blend-mode: difference;
             background: #fff;
             opacity: 0;
-            /* Убрана анимация размера (width/height) */
             transition: opacity 0.5s ease;
         }
 
@@ -65,31 +64,19 @@
         .title-wrapper.moved { top: 40px; transform: translateY(0); }
         .title-wrapper.moved h1 { font-size: 24px; }
 
+        /* Логика скрытия флага в темной теме */
         .flag-container { 
             position: relative; 
             display: flex; 
             align-items: center; 
             justify-content: center; 
             line-height: 0;
+            transition: opacity 0.3s ease;
         }
         .title-flag { height: 22px; width: auto; opacity: 0; transition: opacity 0.8s ease-in-out; transition-delay: 1s; }
         .title-wrapper.moved .title-flag { opacity: 1; }
 
-        .flag-text {
-            position: absolute; 
-            color: #fff; 
-            font-size: 10px; 
-            font-weight: bold;
-            opacity: 0; 
-            transition: opacity 0.3s ease; 
-            pointer-events: none;
-            z-index: 2;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            letter-spacing: 0;
-        }
-        body.dark-mode .flag-text { opacity: 1; }
+        body.dark-mode .flag-container { opacity: 0; visibility: hidden; }
 
         .content-fade { 
             opacity: 0; visibility: hidden; transition: opacity 0.8s ease; 
@@ -103,7 +90,6 @@
             display: block; font-weight: bold; font-size: 13px; text-transform: uppercase;
             color: var(--main-color); text-decoration: none; margin-bottom: 5px; padding: 8px 0;
             border-bottom: 1px solid var(--main-color); transition: color 0.2s, border-bottom 0.5s;
-            /* Ховер с серой подсветкой удален */
         }
 
         .gallery-container { overflow: hidden; width: 100%; margin-top: 20px; font-size: 0; }
@@ -126,7 +112,6 @@
             background: var(--main-color); color: var(--bg-color); border: none; padding: 8px 12px;
             font-family: 'Bookish Book', sans-serif; font-size: 10px;
             text-transform: uppercase; transition: background 0.5s, color 0.5s;
-            /* Ховер с серой подсветкой удален */
         }
 
         .tooltip-wrapper { position: relative; }
@@ -163,15 +148,14 @@
         <h1 id="typewriter-title"></h1>
         <div class="flag-container">
             <img src="flag.png" alt="flag" class="title-flag">
-            <span class="flag-text">11</span>
         </div>
     </div>
 
     <div class="content-fade" id="main-content">
-        <a href="https://instagram.com/ogdnka" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
-        <a href="https://t.me/eelevex" class="link-text interactive" target="_blank">tgk: @11</a>
-        <a href="https://twitch.tv/bananapapa228" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
-        <a href="https://tiktok.com/@dnkanle" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
+        <a href="https://instagram.com" class="link-text interactive" target="_blank">Inst: @ogdnka</a>
+        <a href="https://t.me" class="link-text interactive" target="_blank">tgk: @11</a>
+        <a href="https://twitch.tv" class="link-text interactive" target="_blank">Twitch: @bananapapa228</a>
+        <a href="https://tiktok.com" class="link-text interactive" target="_blank">tiktok: @dnkanle</a>
         <a href="javascript:void(0)" class="link-text interactive" id="discord-btn">discord: @dnka</a>
 
         <div class="gallery-container">
@@ -227,7 +211,6 @@
 
             if (x !== null && y !== null) {
                 if (e.type === 'touchstart') {
-                    // Оставлено плавное подплывание для мобилок
                     cursor.style.transition = 'left 0.6s cubic-bezier(0.25, 1, 0.5, 1), top 0.6s cubic-bezier(0.25, 1, 0.5, 1), opacity 0.5s';
                 } else {
                     cursor.style.transition = 'opacity 0.5s';
@@ -243,8 +226,6 @@
         window.addEventListener('mousemove', updateCursorPos);
         window.addEventListener('touchstart', updateCursorPos);
         window.addEventListener('touchmove', updateCursorPos);
-
-        // УБРАНО: Слушатели mouseenter/mouseleave для увеличения курсора
 
         discordBtn.addEventListener('click', () => {
             navigator.clipboard.writeText('dnka').then(() => {
