--- a/index.html
+++ b/index.html
@@ -210,21 +210,20 @@
         function updateMusic() {
             const isCustom = document.body.classList.contains('custom-mode');
             
-            // Обновляем текст в подсказке звука
-            soundTooltip.innerText = isCustom ? "asix300 - гога лох" : "VZk1ll Turbo 2000 - MESTO SMERTI";
-
-            if (isMuted) return;
+            // Динамический текст подсказки
+            soundTooltip.innerText = isCustom ? "asix300 - goga lox" : "VZk1ll Turbo 2000 - MESTO SMERTI";
             
-            if (isCustom) {
-                audioDefault.pause();
-                audioCustom.play();
-            } else {
-                audioCustom.pause();
-                audioDefault.play();
-            }
+            if (isMuted) return;
+            if (isCustom) { audioDefault.pause(); audioCustom.play(); } 
+            else { audioCustom.pause(); audioDefault.play(); }
         }
 
-        modeBtn.addEventListener('mousedown', () => {
+        modeBtn.addEventListener('mousedown', startPress);
+        modeBtn.addEventListener('touchstart', startPress);
+        modeBtn.addEventListener('mouseup', endPress);
+        modeBtn.addEventListener('touchend', endPress);
+
+        function startPress() {
             pressTimer = setTimeout(() => {
                 document.body.classList.remove('dark-mode');
                 document.body.classList.toggle('custom-mode');
@@ -233,9 +232,9 @@
                 updateMusic();
                 pressTimer = null;
             }, 1000); 
-        });
+        }
 
-        modeBtn.addEventListener('mouseup', () => {
+        function endPress() {
             if (pressTimer) {
                 clearTimeout(pressTimer);
                 if (document.body.classList.contains('custom-mode')) return;
@@ -243,29 +242,7 @@
                 document.body.classList.toggle('dark-mode', isDarkMode);
                 modeBtn.innerText = isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]";
             }
-        });
-
-        modeBtn.addEventListener('touchstart', (e) => {
-            e.preventDefault();
-            pressTimer = setTimeout(() => {
-                document.body.classList.remove('dark-mode');
-                document.body.classList.toggle('custom-mode');
-                const isCustom = document.body.classList.contains('custom-mode');
-                modeBtn.innerText = isCustom ? "[ MODE: CUSTOM ]" : (isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]");
-                updateMusic();
-                pressTimer = null;
-            }, 1000);
-        });
-
-        modeBtn.addEventListener('touchend', () => {
-            if (pressTimer) {
-                clearTimeout(pressTimer);
-                if (document.body.classList.contains('custom-mode')) return;
-                isDarkMode = !isDarkMode;
-                document.body.classList.toggle('dark-mode', isDarkMode);
-                modeBtn.innerText = isDarkMode ? "[ MODE: DARK ]" : "[ MODE: LIGHT ]";
-            }
-        });
+        }
 
         const showCursor = (e) => {
             cursor.style.opacity = '1';
@@ -278,13 +255,8 @@
             const isTouch = e.type.startsWith('touch');
             const x = isTouch ? (e.touches ? e.touches.clientX : null) : e.clientX;
             const y = isTouch ? (e.touches ? e.touches.clientY : null) : e.clientY;
-
             if (x !== null && y !== null) {
-                if (e.type === 'touchstart') {
-                    cursor.style.transition = 'left 0.6s cubic-bezier(0.25, 1, 0.5, 1), top 0.6s cubic-bezier(0.25, 1, 0.5, 1), opacity 0.5s';
-                } else {
-                    cursor.style.transition = 'opacity 0.5s';
-                }
+                cursor.style.transition = 'opacity 0.5s';
                 cursor.style.left = x + 'px';
                 cursor.style.top = y + 'px';
             }
@@ -306,7 +278,6 @@
 
         const textToType = "HELLO, IM DNKA!";
         let charIndex = 0;
-
         function typeView() {
             if (charIndex < textToType.length) {
                 document.getElementById('typewriter-title').textContent += textToType.charAt(charIndex);
@@ -335,7 +306,6 @@
                 galleryPos -= currentSpeed;
                 if (Math.abs(galleryPos) >= gallery.offsetWidth / 2) galleryPos = 0;
                 gallery.style.transform = `translateX(${galleryPos}px)`;
-
                 marqueePos -= 1.5; 
                 if (marqueePos < -marqueeEl.offsetWidth) {
                     marqueePos = window.innerWidth;
@@ -352,17 +322,8 @@
             isMuted = !isMuted;
             const isCustom = document.body.classList.contains('custom-mode');
             const currentAudio = isCustom ? audioCustom : audioDefault;
-
-            if (!isMuted) {
-                currentAudio.play();
-                muteBtn.innerText = "[ SOUND: ON ]";
-                targetSpeed = 0.8;
-            } else {
-                audioDefault.pause();
-                audioCustom.pause();
-                muteBtn.innerText = "[ SOUND: OFF ]";
-                targetSpeed = 0;
-            }
+            if (!isMuted) { currentAudio.play(); muteBtn.innerText = "[ SOUND: ON ]"; targetSpeed = 0.8; } 
+            else { audioDefault.pause(); audioCustom.pause(); muteBtn.innerText = "[ SOUND: OFF ]"; targetSpeed = 0; }
         });
 
         window.onload = typeView;
